--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -73,7 +73,7 @@ override CL_GCC_OPTIMIZE := $(CL_GCC_OPTIMIZE)
 # Either just names or name:val1|...|valN
 
 # Check some system settings also
-override CL_VARS += $(if $(CL_COMP),CL_COMP:gcc46|gcc44|gcc43|gcc42|gcc41|gcc40|gcc34|gcc33|gcc32|gcc295|gcc296)
+override CL_VARS += $(if $(CL_COMP),CL_COMP:gcc47|gcc46|gcc44|gcc43|gcc42|gcc41|gcc40|gcc34|gcc33|gcc32|gcc295|gcc296)
 override CL_VARS += $(if $(CL_LTYPE),CL_LTYPE:shared|static)
 override CL_VARS += $(if $(filter create_wi update_wi,$(MAKECMDGOALS)),CL_MODULE)
 override CL_VARS += $(if $(filter install,$(MAKECMDGOALS)),CL_PREFIX)
