Recode files to UTF-8.
Signed-off-by: Alexander GQ Gerasiov <gq@cs.msu.su>

--- a/process_wi.awk.in
+++ b/process_wi.awk.in
@@ -1,24 +1,24 @@
-// Массив WI - полные имена инсталляций
-// Массив WI_modules - имена модулей
-// Массив WI_params - параметры
-// Массив WI_req - списки требований
-// (Эти массивы индексируются числами)
-// Общее количество рабочих инсталляций - в переменной WI_total
+// п°п╟я│я│п╦п╡ WI - п©п╬п╩п╫я▀п╣ п╦п╪п╣п╫п╟ п╦п╫я│я┌п╟п╩п╩я▐я├п╦п╧
+// п°п╟я│я│п╦п╡ WI_modules - п╦п╪п╣п╫п╟ п╪п╬п╢я┐п╩п╣п╧
+// п°п╟я│я│п╦п╡ WI_params - п©п╟я─п╟п╪п╣я┌я─я▀
+// п°п╟я│я│п╦п╡ WI_req - я│п©п╦я│п╨п╦ я┌я─п╣п╠п╬п╡п╟п╫п╦п╧
+// (п╜я┌п╦ п╪п╟я│я│п╦п╡я▀ п╦п╫п╢п╣п╨я│п╦я─я┐я▌я┌я│я▐ я┤п╦я│п╩п╟п╪п╦)
+// п·п╠я┴п╣п╣ п╨п╬п╩п╦я┤п╣я│я┌п╡п╬ я─п╟п╠п╬я┤п╦я┘ п╦п╫я│я┌п╟п╩п╩я▐я├п╦п╧ - п╡ п©п╣я─п╣п╪п╣п╫п╫п╬п╧ WI_total
 
 
-// Добавления слова WORD к строке LIST через разделитель D
+// п■п╬п╠п╟п╡п╩п╣п╫п╦я▐ я│п╩п╬п╡п╟ WORD п╨ я│я┌я─п╬п╨п╣ LIST я┤п╣я─п╣п╥ я─п╟п╥п╢п╣п╩п╦я┌п╣п╩я▄ D
 #define append(LIST,WORD,D)  { @\
   if ( LIST=="" )  { LIST=WORD }  else  { LIST=LIST""D""WORD } @\
   } @\
 
-// Разбиение слова WORD на два поля, разделенные символом "_"
+// п═п╟п╥п╠п╦п╣п╫п╦п╣ я│п╩п╬п╡п╟ WORD п╫п╟ п╢п╡п╟ п©п╬п╩я▐, я─п╟п╥п╢п╣п╩п╣п╫п╫я▀п╣ я│п╦п╪п╡п╬п╩п╬п╪ "_"
 #define split_wi_string(WORD,MOD,REQ)  { @\
   split ( WORD, sws, "_" );  MOD = sws[1];  REQ = sws[2];  @\
   } @\
 
-// Проверка, что в списке M1 есть все поля из списка M2
-// Оба списка разделяются символами "-"
-// Результат заносится в третий параметр
+// п÷я─п╬п╡п╣я─п╨п╟, я┤я┌п╬ п╡ я│п©п╦я│п╨п╣ M1 п╣я│я┌я▄ п╡я│п╣ п©п╬п╩я▐ п╦п╥ я│п©п╦я│п╨п╟ M2
+// п·п╠п╟ я│п©п╦я│п╨п╟ я─п╟п╥п╢п╣п╩я▐я▌я┌я│я▐ я│п╦п╪п╡п╬п╩п╟п╪п╦ "-"
+// п═п╣п╥я┐п╩я▄я┌п╟я┌ п╥п╟п╫п╬я│п╦я┌я│я▐ п╡ я┌я─п╣я┌п╦п╧ п©п╟я─п╟п╪п╣я┌я─
 #define check_req(M1,M2,res)  { @\
   bn1 = split ( M1, ba1, "-" ); @\
   bn2 = split ( M2, ba2, "-" ); @\
@@ -29,9 +29,9 @@
   if ( bi2>bn2 )  {res=1}  else  {res=0} @\
   } @\
 
-// Проверка, что в списке M1 нет ни одного поля из списка M2
-// Первый список символами "-", второй - пробелами
-// Результат заносится в третий параметр
+// п÷я─п╬п╡п╣я─п╨п╟, я┤я┌п╬ п╡ я│п©п╦я│п╨п╣ M1 п╫п╣я┌ п╫п╦ п╬п╢п╫п╬пЁп╬ п©п╬п╩я▐ п╦п╥ я│п©п╦я│п╨п╟ M2
+// п÷п╣я─п╡я▀п╧ я│п©п╦я│п╬п╨ я│п╦п╪п╡п╬п╩п╟п╪п╦ "-", п╡я┌п╬я─п╬п╧ - п©я─п╬п╠п╣п╩п╟п╪п╦
+// п═п╣п╥я┐п╩я▄я┌п╟я┌ п╥п╟п╫п╬я│п╦я┌я│я▐ п╡ я┌я─п╣я┌п╦п╧ п©п╟я─п╟п╪п╣я┌я─
 #define check_cnf(M1,M2,res)  { @\
   bn1 = split ( M1, ba1, "-" ); @\
   bn2 = split ( M2, ba2, " " ); @\
@@ -42,10 +42,10 @@
   if ( bi2>bn2 )  {res=1}  else  {res=0} @\
   } @\
 
-// Получение и сортировка списка НОМЕРОВ доступных инсталляций модуля M
-// Обязательные параметры - в строке RP, разделены символом "-"
-// Недопустимые параметры - в строке ZP, разделены символом "-"
-// Результат - в строку RES, разделить пробелами
+// п÷п╬п╩я┐я┤п╣п╫п╦п╣ п╦ я│п╬я─я┌п╦я─п╬п╡п╨п╟ я│п©п╦я│п╨п╟ п²п·п°п∙п═п·п▓ п╢п╬я│я┌я┐п©п╫я▀я┘ п╦п╫я│я┌п╟п╩п╩я▐я├п╦п╧ п╪п╬п╢я┐п╩я▐ M
+// п·п╠я▐п╥п╟я┌п╣п╩я▄п╫я▀п╣ п©п╟я─п╟п╪п╣я┌я─я▀ - п╡ я│я┌я─п╬п╨п╣ RP, я─п╟п╥п╢п╣п╩п╣п╫я▀ я│п╦п╪п╡п╬п╩п╬п╪ "-"
+// п²п╣п╢п╬п©я┐я│я┌п╦п╪я▀п╣ п©п╟я─п╟п╪п╣я┌я─я▀ - п╡ я│я┌я─п╬п╨п╣ ZP, я─п╟п╥п╢п╣п╩п╣п╫я▀ я│п╦п╪п╡п╬п╩п╬п╪ "-"
+// п═п╣п╥я┐п╩я▄я┌п╟я┌ - п╡ я│я┌я─п╬п╨я┐ RES, я─п╟п╥п╢п╣п╩п╦я┌я▄ п©я─п╬п╠п╣п╩п╟п╪п╦
 #define get_available_wi(M,RP,ZP,RES)  { @\
   RES=""; @\
   for ( ai=1; ai<=WI_total; ai++ ) { @\
@@ -59,9 +59,9 @@
     } @\
   } @\
 
-// Сортировка списка инсталляций по качеству
-// LIST - входной список номеров, RES - выходной список номеров
-// optimized предпочитаем перед debug, shared предпочитаем перед static.
+// п║п╬я─я┌п╦я─п╬п╡п╨п╟ я│п©п╦я│п╨п╟ п╦п╫я│я┌п╟п╩п╩я▐я├п╦п╧ п©п╬ п╨п╟я┤п╣я│я┌п╡я┐
+// LIST - п╡я┘п╬п╢п╫п╬п╧ я│п©п╦я│п╬п╨ п╫п╬п╪п╣я─п╬п╡, RES - п╡я▀я┘п╬п╢п╫п╬п╧ я│п©п╦я│п╬п╨ п╫п╬п╪п╣я─п╬п╡
+// optimized п©я─п╣п╢п©п╬я┤п╦я┌п╟п╣п╪ п©п╣я─п╣п╢ debug, shared п©я─п╣п╢п©п╬я┤п╦я┌п╟п╣п╪ п©п╣я─п╣п╢ static.
 // WARNING: if you change parameter weihts (values added to aq[ai]),
 //          don't forget to fix the loop bound in the bottom of the macro!
 #define sort_wi_list(LIST,RES)  { @\
@@ -86,9 +86,9 @@
   } @\
 
 
-// Занесение в RES отсортированного списка номеров доступных WI модуля MOD
-// с требованиями RP, с учетом текущего значения conflicts
-// c выводом комментариев, оттесненных на INDENT, в режиме verbose
+// п≈п╟п╫п╣я│п╣п╫п╦п╣ п╡ RES п╬я┌я│п╬я─я┌п╦я─п╬п╡п╟п╫п╫п╬пЁп╬ я│п©п╦я│п╨п╟ п╫п╬п╪п╣я─п╬п╡ п╢п╬я│я┌я┐п©п╫я▀я┘ WI п╪п╬п╢я┐п╩я▐ MOD
+// я│ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐п╪п╦ RP, я│ я┐я┤п╣я┌п╬п╪ я┌п╣п╨я┐я┴п╣пЁп╬ п╥п╫п╟я┤п╣п╫п╦я▐ conflicts
+// c п╡я▀п╡п╬п╢п╬п╪ п╨п╬п╪п╪п╣п╫я┌п╟я─п╦п╣п╡, п╬я┌я┌п╣я│п╫п╣п╫п╫я▀я┘ п╫п╟ INDENT, п╡ я─п╣п╤п╦п╪п╣ verbose
 #define get_wi_list(MOD,RP,RES,INDENT)  { @\
   get_available_wi ( MOD, RP, conflicts, gwltmp ); @\
   sort_wi_list ( gwltmp, RES ); @\
@@ -104,7 +104,7 @@
   } @\
 
 
-// Получение имени компилятора из PARAMS в RES
+// п÷п╬п╩я┐я┤п╣п╫п╦п╣ п╦п╪п╣п╫п╦ п╨п╬п╪п©п╦п╩я▐я┌п╬я─п╟ п╦п╥ PARAMS п╡ RES
 #define find_comp_name(PARAMS,RES)  { @\
   fcnn = split ( PARAMS, fcna, "-" ); @\
   RES = ""; @\
@@ -124,8 +124,8 @@
 	 (fcna[fcni]=="gcc") )  {RES=fcna[fcni]; break;} @\
   } @\
 
-// Установка переменной conflicts в зависимости от текущей установки comp
-// и comp_param
+// пёя│я┌п╟п╫п╬п╡п╨п╟ п©п╣я─п╣п╪п╣п╫п╫п╬п╧ conflicts п╡ п╥п╟п╡п╦я│п╦п╪п╬я│я┌п╦ п╬я┌ я┌п╣п╨я┐я┴п╣п╧ я┐я│я┌п╟п╫п╬п╡п╨п╦ comp
+// п╦ comp_param
 #define set_conflicts  { @\
   if ( comp=="gcc" || comp=="gcc295" )  {conflicts = "gcc40 gcc34 gcc33 gcc32 gcc296"} @\
   else if ( comp=="gcc40" || comp == "gcc34" )  {conflicts = "gcc33 gcc32 gcc295 gcc gcc296"} @\
@@ -135,13 +135,13 @@
   } @\
 
 
-// Первая строка - запросы
-// Вторая строка - параметры:
+// п÷п╣я─п╡п╟я▐ я│я┌я─п╬п╨п╟ - п╥п╟п©я─п╬я│я▀
+// п▓я┌п╬я─п╟я▐ я│я┌я─п╬п╨п╟ - п©п╟я─п╟п╪п╣я┌я─я▀:
 //   $1: quiet | verbose
-//   $2: need | compute (про comp_param)
+//   $2: need | compute (п©я─п╬ comp_param)
 //   $3: gcc47 | gcc46 | gcc44 | gcc43| gcc42 | gcc41 | gcc40 | gcc34 | gcc33 | gcc32 | gcc295 | gcc296 | any
-// Каждая из следующих строк - доступная рабочая инсталляция, после которой ее
-//   требования
+// п п╟п╤п╢п╟я▐ п╦п╥ я│п╩п╣п╢я┐я▌я┴п╦я┘ я│я┌я─п╬п╨ - п╢п╬я│я┌я┐п©п╫п╟я▐ я─п╟п╠п╬я┤п╟я▐ п╦п╫я│я┌п╟п╩п╩я▐я├п╦я▐, п©п╬я│п╩п╣ п╨п╬я┌п╬я─п╬п╧ п╣п╣
+//   я┌я─п╣п╠п╬п╡п╟п╫п╦я▐
 BEGIN  {
   getline;
   req_list = $0;
@@ -162,7 +162,7 @@ BEGIN  {
 
 END  {
 
- // Сначала получаем списки доступных инсталляций для каждого запроса.
+ // п║п╫п╟я┤п╟п╩п╟ п©п╬п╩я┐я┤п╟п╣п╪ я│п©п╦я│п╨п╦ п╢п╬я│я┌я┐п©п╫я▀я┘ п╦п╫я│я┌п╟п╩п╩я▐я├п╦п╧ п╢п╩я▐ п╨п╟п╤п╢п╬пЁп╬ п╥п╟п©я─п╬я│п╟.
 
   nreq = split ( req_list, req, " " );
   for ( i=1; i<=nreq; i++ )  split_wi_string ( req[i], module[i], params[i] );
@@ -179,25 +179,25 @@ END  {
     }
   if ( err )  exit 1;
 
- // Будем выбирать комбинацию при помощи поиска вглубь.
- // В процессе поиска:
- //   n - глубина
- //   module[i] - имя i-го требуемого модуля
- //   params[i] - требования к параметрам i-го требуемого модуля
- //   clist[i] - список НОМЕРОВ (индексов в WI) кандидатов на i-е требование
- //   try[i] - номер выбранного кандидата (из clist[i])
- //   candp[i] - его параметры
- //   nreq - количество требований (может меняться в процессе)
- //   saveds[n__m__k], savedr[n__m__k] - сохраненные требования.
- //     Сохранены при принятии кандидата m на место n, соответствуют
- //     требованию k
- //     Значения:
- //       saveds[]=0 - не использовалось
- //       saveds[]=1 - k-е требование появилось здесь
- //       saveds[]=2 - k-е требование появилось раньше;
- //         savedr[] содержит сохраненное требование к параметрам
+ // п▒я┐п╢п╣п╪ п╡я▀п╠п╦я─п╟я┌я▄ п╨п╬п╪п╠п╦п╫п╟я├п╦я▌ п©я─п╦ п©п╬п╪п╬я┴п╦ п©п╬п╦я│п╨п╟ п╡пЁп╩я┐п╠я▄.
+ // п▓ п©я─п╬я├п╣я│я│п╣ п©п╬п╦я│п╨п╟:
+ //   n - пЁп╩я┐п╠п╦п╫п╟
+ //   module[i] - п╦п╪я▐ i-пЁп╬ я┌я─п╣п╠я┐п╣п╪п╬пЁп╬ п╪п╬п╢я┐п╩я▐
+ //   params[i] - я┌я─п╣п╠п╬п╡п╟п╫п╦я▐ п╨ п©п╟я─п╟п╪п╣я┌я─п╟п╪ i-пЁп╬ я┌я─п╣п╠я┐п╣п╪п╬пЁп╬ п╪п╬п╢я┐п╩я▐
+ //   clist[i] - я│п©п╦я│п╬п╨ п²п·п°п∙п═п·п▓ (п╦п╫п╢п╣п╨я│п╬п╡ п╡ WI) п╨п╟п╫п╢п╦п╢п╟я┌п╬п╡ п╫п╟ i-п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦п╣
+ //   try[i] - п╫п╬п╪п╣я─ п╡я▀п╠я─п╟п╫п╫п╬пЁп╬ п╨п╟п╫п╢п╦п╢п╟я┌п╟ (п╦п╥ clist[i])
+ //   candp[i] - п╣пЁп╬ п©п╟я─п╟п╪п╣я┌я─я▀
+ //   nreq - п╨п╬п╩п╦я┤п╣я│я┌п╡п╬ я┌я─п╣п╠п╬п╡п╟п╫п╦п╧ (п╪п╬п╤п╣я┌ п╪п╣п╫я▐я┌я▄я│я▐ п╡ п©я─п╬я├п╣я│я│п╣)
+ //   saveds[n__m__k], savedr[n__m__k] - я│п╬я┘я─п╟п╫п╣п╫п╫я▀п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐.
+ //     п║п╬я┘я─п╟п╫п╣п╫я▀ п©я─п╦ п©я─п╦п╫я▐я┌п╦п╦ п╨п╟п╫п╢п╦п╢п╟я┌п╟ m п╫п╟ п╪п╣я│я┌п╬ n, я│п╬п╬я┌п╡п╣я┌я│я┌п╡я┐я▌я┌
+ //     я┌я─п╣п╠п╬п╡п╟п╫п╦я▌ k
+ //     п≈п╫п╟я┤п╣п╫п╦я▐:
+ //       saveds[]=0 - п╫п╣ п╦я│п©п╬п╩я▄п╥п╬п╡п╟п╩п╬я│я▄
+ //       saveds[]=1 - k-п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦п╣ п©п╬я▐п╡п╦п╩п╬я│я▄ п╥п╢п╣я│я▄
+ //       saveds[]=2 - k-п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦п╣ п©п╬я▐п╡п╦п╩п╬я│я▄ я─п╟п╫я▄я┬п╣;
+ //         savedr[] я│п╬п╢п╣я─п╤п╦я┌ я│п╬я┘я─п╟п╫п╣п╫п╫п╬п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦п╣ п╨ п©п╟я─п╟п╪п╣я┌я─п╟п╪
 
- // Макрос для отката новых требований, внесенных текущим кандидатом на уровне n
+ // п°п╟п╨я─п╬я│ п╢п╩я▐ п╬я┌п╨п╟я┌п╟ п╫п╬п╡я▀я┘ я┌я─п╣п╠п╬п╡п╟п╫п╦п╧, п╡п╫п╣я│п╣п╫п╫я▀я┘ я┌п╣п╨я┐я┴п╦п╪ п╨п╟п╫п╢п╦п╢п╟я┌п╬п╪ п╫п╟ я┐я─п╬п╡п╫п╣ n
 #define n_cleanup  { @\
   for ( ncm=nreq; ncm>=n+1; ncm-- )  { @\
     ncind = n"__"try[n]"__"ncm; @\
@@ -218,7 +218,7 @@ END  {
   save_cp[0] = comp_param;  save_c[0] = comp;
   n = 1;  try[1] = 0;
 
-  while ( (n>0) && (n<=nreq) )  {	// Основной цикл поиска вглубь
+  while ( (n>0) && (n<=nreq) )  {	// п·я│п╫п╬п╡п╫п╬п╧ я├п╦п╨п╩ п©п╬п╦я│п╨п╟ п╡пЁп╩я┐п╠я▄
 
     save_cp[n] = comp_param;  save_c[n] = comp;
 
@@ -230,11 +230,11 @@ END  {
     try[n]++;
     total = split ( clist[n], cand, " " );
 
-   // Варианты исчерпались ?
+   // п▓п╟я─п╦п╟п╫я┌я▀ п╦я│я┤п╣я─п©п╟п╩п╦я│я▄ ?
     if ( try[n] > total )
       {n--; n_cleanup; set_conflicts; continue;}
 
-   // Нет, еще есть вариант
+   // п²п╣я┌, п╣я┴п╣ п╣я│я┌я▄ п╡п╟я─п╦п╟п╫я┌
     if ( verbose )  {
       if ( params[n]=="" )
         print ( indent "Trying to use " WI[cand[try[n]]] " for " module[n] );
@@ -242,11 +242,11 @@ END  {
         print ( indent "Trying to use " WI[cand[try[n]]] " for " module[n] "_" params[n] );
       }
 
-   // Сохраняем его параметры
+   // п║п╬я┘я─п╟п╫я▐п╣п╪ п╣пЁп╬ п©п╟я─п╟п╪п╣я┌я─я▀
     candp[n] = WI_params[cand[try[n]]];
 
-   // Проверим, удовлетворяет ли он требованиям params[n]
-   // (они могли измениться)
+   // п÷я─п╬п╡п╣я─п╦п╪, я┐п╢п╬п╡п╩п╣я┌п╡п╬я─я▐п╣я┌ п╩п╦ п╬п╫ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐п╪ params[n]
+   // (п╬п╫п╦ п╪п╬пЁп╩п╦ п╦п╥п╪п╣п╫п╦я┌я▄я│я▐)
     check_req ( candp[n], params[n], res );
     if ( res==0 )  {
       if ( verbose )
@@ -260,10 +260,10 @@ END  {
       continue;
       }
 
-   // Кандидат удовлетворяет требованиям.
-   // Кандидат может вносить новое требование к компилятору
-   // Первый же кандидат, в параметры которого входит компилятор, устанавливает
-   // comp_param="need" и comp=<использованный компилятор>
+   // п п╟п╫п╢п╦п╢п╟я┌ я┐п╢п╬п╡п╩п╣я┌п╡п╬я─я▐п╣я┌ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐п╪.
+   // п п╟п╫п╢п╦п╢п╟я┌ п╪п╬п╤п╣я┌ п╡п╫п╬я│п╦я┌я▄ п╫п╬п╡п╬п╣ я┌я─п╣п╠п╬п╡п╟п╫п╦п╣ п╨ п╨п╬п╪п©п╦п╩я▐я┌п╬я─я┐
+   // п÷п╣я─п╡я▀п╧ п╤п╣ п╨п╟п╫п╢п╦п╢п╟я┌, п╡ п©п╟я─п╟п╪п╣я┌я─я▀ п╨п╬я┌п╬я─п╬пЁп╬ п╡я┘п╬п╢п╦я┌ п╨п╬п╪п©п╦п╩я▐я┌п╬я─, я┐я│я┌п╟п╫п╟п╡п╩п╦п╡п╟п╣я┌
+   // comp_param="need" п╦ comp=<п╦я│п©п╬п╩я▄п╥п╬п╡п╟п╫п╫я▀п╧ п╨п╬п╪п©п╦п╩я▐я┌п╬я─>
     find_comp_name ( candp[n], tmpcomp );
     if ( tmpcomp == "gcc" )  tmpcomp = "gcc43"
     if ( tmpcomp != "" )  {
@@ -272,13 +272,13 @@ END  {
         print ( bindent "Setting compiler requirement to " comp );
       }
 
-   // У кандидата могут быть свои требования.
-   // Если это требования к модулю, для которого уже выбран кандидат, то
-   //   просто проверяем, выполнены ли они.
-   // Если это требования к модулю, который уже есть в списке req, то
-   //   добавляем их к текущим требованиям, сохранив старые
-   // Если это требования к новому модулю, добавим модуль в req
-   //   и увеличим nreq
+   // пё п╨п╟п╫п╢п╦п╢п╟я┌п╟ п╪п╬пЁя┐я┌ п╠я▀я┌я▄ я│п╡п╬п╦ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐.
+   // п∙я│п╩п╦ я█я┌п╬ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐ п╨ п╪п╬п╢я┐п╩я▌, п╢п╩я▐ п╨п╬я┌п╬я─п╬пЁп╬ я┐п╤п╣ п╡я▀п╠я─п╟п╫ п╨п╟п╫п╢п╦п╢п╟я┌, я┌п╬
+   //   п©я─п╬я│я┌п╬ п©я─п╬п╡п╣я─я▐п╣п╪, п╡я▀п©п╬п╩п╫п╣п╫я▀ п╩п╦ п╬п╫п╦.
+   // п∙я│п╩п╦ я█я┌п╬ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐ п╨ п╪п╬п╢я┐п╩я▌, п╨п╬я┌п╬я─я▀п╧ я┐п╤п╣ п╣я│я┌я▄ п╡ я│п©п╦я│п╨п╣ req, я┌п╬
+   //   п╢п╬п╠п╟п╡п╩я▐п╣п╪ п╦я┘ п╨ я┌п╣п╨я┐я┴п╦п╪ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐п╪, я│п╬я┘я─п╟п╫п╦п╡ я│я┌п╟я─я▀п╣
+   // п∙я│п╩п╦ я█я┌п╬ я┌я─п╣п╠п╬п╡п╟п╫п╦я▐ п╨ п╫п╬п╡п╬п╪я┐ п╪п╬п╢я┐п╩я▌, п╢п╬п╠п╟п╡п╦п╪ п╪п╬п╢я┐п╩я▄ п╡ req
+   //   п╦ я┐п╡п╣п╩п╦я┤п╦п╪ nreq
 
     ncr = split ( WI_req[cand[try[n]]], cr, " " );
     vip = 1;
@@ -286,12 +286,12 @@ END  {
       split_wi_string ( cr[i], needm, needp );
       for ( j=1; j<=nreq; j++ )
         if ( module[j]==needm )  {
-	  if ( j<=n )  {	// Кандидат уже выбран
+	  if ( j<=n )  {	// п п╟п╫п╢п╦п╢п╟я┌ я┐п╤п╣ п╡я▀п╠я─п╟п╫
 	    check_req ( candp[j], needp, vip );
 	    if ( verbose && (vip==0) )
 	      print ( bindent "New requirements " cr[i] " are not met" );
 	    }
-	  else  {		// Кандидат еще не выбран, но модуль в списке
+	  else  {		// п п╟п╫п╢п╦п╢п╟я┌ п╣я┴п╣ п╫п╣ п╡я▀п╠я─п╟п╫, п╫п╬ п╪п╬п╢я┐п╩я▄ п╡ я│п©п╦я│п╨п╣
 	    if ( needp!="" )  {
               if ( verbose )
 	        print ( bindent "Appendind requirements " needp " to " needm "-" params[j] );
